Changed font-style to be more digital

--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html>
 
 <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
     <style>
+        
+        html{
+            font-family: 'Orbitron', sans-serif;
+        }
         #body{
             background-color: rgb(86, 109, 109);
+            
         }
         #title{
             display:flex;
